[package]
name = "frp-msg"
version = "0.1.0"
authors = ["caryxiao <289872225@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
enum-as-inner = "0.3.3"
frp-trait = { path = "../frp-trait" }
