[package]
name = "frpc"
version = "0.1.0"
authors = ["caryxiao <289872225@qq.com>", "LaughingGor <longzhiyi6608@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
toml = "0.5"
serde_derive = "1.0"
serde = "1.0"

[lib]
name = "frpc"
path = "src/lib.rs"