[package]
name = "frpc"
version = "0.1.0"
authors = ["caryxiao <289872225@qq.com>", "LaughingGor <longzhiyi6608@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
toml = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bincode = "1"
reqwest = "0.11"
futures = "0.3"
yamux = "0.9"
bytes = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec", "compat"] }
frp-trait = { path = "../frp-trait" }
frp-msg = { path = "../frp-msg" }

[lib]
name = "frpc"
path = "src/lib.rs"